# pyinsp-command

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  python_l.py  requirements.txt  setup.py
examples/: integration_example.sh
lib/: linter.py  pyinsp.py
tests/: run_tests.sh
tests/data/: complex_error.py  invalid_script.py  many_lines.py  simple_error.py  valid_script.py
tests/functional/: test_cli.sh
tests/unit/: test_pyinsp.py
